--- a/src/components/Deals/styles.css
+++ b/src/components/Deals/styles.css
@@ -11,6 +11,7 @@
 }
 
 .more {
+    float: right;
     font-size: 1rem;
     font-weight: 700;
     border-radius: 0;
@@ -63,7 +64,6 @@
 
 .cardContainer {
     border-radius: .75rem;
-    white-space: normal;
     box-shadow: 0 0.063rem 0.188rem;
     padding: 1rem;
     margin-top: 2rem;
