--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -1,5 +1,3 @@
-.buttonWrapper {}
-
 label {
     margin-right: 1rem;
 }
@@ -23,13 +21,14 @@ label {
     padding: 9px;
 }
 
+.dropdownHolder {
+    padding: 11px;
+}
+
 .checkBox {
     margin-right: 0.2rem;
 }
 
-.searchButton {
-    float: right;
-}
 
 .buttonText {
     width: 100%;
@@ -51,5 +50,15 @@ label {
         position: relative;
         background-position: 50% 60%;
 
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .searchTitle {
+        display: none;
+    }
+
+    .searchComponent {
+        margin-top: -2.65rem;
     }
 }
